Handle quoted guest paths and cyclic trace references safely